policy-K8sBlockLoadBalancer.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockLoadBalancer
metadata:
  name: avesha-policy-block-all-lb-service
spec:
  enforcementAction: deny
  match:
    excludedNamespaces:
      - apigee
      - ingress-nginx
    kinds:
      - apiGroups:
          - ''
        kinds:
          - Service
