policy-K8sPSPCapabilities.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPCapabilities
metadata:
  name: avesha-policy-pss-restricted-v2022-capabilities
spec:
  enforcementAction: deny
  match:
    excludedNamespaces:
      - kube-system
      - anthos-identity-service
      - cert-manager
      - apigee
      - egs-monitoring
      - egs-gpu-operator
      - kt-postgresql
    kinds:
      - apiGroups:
          - ''
        kinds:
          - Pod
  parameters:
    allowedCapabilities:
      - NET_BIND_SERVICE
    exemptImages:
      - gcr.io/gke-release/*
      - gcr.io/config-management-release/*
      - gcr.io/kubebuilder/*
      - gcr.io/anthos-baremetal-release/*
      - gcr.io/gke-on-prem-release/*
      - gcr.io/gke-multi-cloud-release/*
      - gke.gcr.io/*
    requiredDropCapabilities:
      - ALL
