policy-K8sPSPPrivilegedContainer.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: avesha-policy-pss-baseline-v2022-privileged-containers
spec:
  enforcementAction: deny
  match:
    excludedNamespaces:
      - kube-system
    kinds:
      - apiGroups:
          - ''
        kinds:
          - Pod
