policy-K8sPSSRunAsNonRoot.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSSRunAsNonRoot
metadata:
  name: avesha-policy-pss-restricted-v2022-running-as-non-root
spec:
  enforcementAction: deny
  match:
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - anthos-identity-service
      - gke-system
      - cluster-*
      - capi-kubeadm-bootstrap-system
      - capi-system
      - vm-system
      - gke-managed-cim
    kinds:
      - apiGroups:
          - ''
        kinds:
          - Pod
