policy-K8sPodsRequireSecurityContext.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodsRequireSecurityContext
metadata:
  name: avesha-policy-k8spodsrequiresecuritycontext
spec:
  enforcementAction: deny
  match:
    excludedNamespaces:
      - kube-system
      - config-management-system
      - asm-system
      - anthos-identity-service
      - apigee
      - egs-monitoring
      - egs-gpu-operator
      - kt-postgresql
    kinds:
      - apiGroups:
          - ''
        kinds:
          - Pod
  parameters:
    exemptImages:
      - gcr.io/anthos-baremetal-release/*
